Revise certification description for clarity
Updated the description of the Master PLC Programming certification to improve clarity and correct capitalization.

--- a/index.html
+++ b/index.html
@@ -798,8 +798,8 @@
         
         <div class="certification-item">
           <strong>Master Plc Programming </strong>
-          <p class="issuer">course covering essential PLC programming skills—from basic logic and your first PLC program to advanced topics like HMI development, internal register manipulation, and SCADA systems.</p>
-          <a href="#" class="cert-link">
+          <p class="issuer">Course covering essential PLC programming skills,From basic logic and your first PLC program to advanced topics like HMI development, Internal register manipulation, And SCADA systems.</p>
+          <a href="https://alison.com/courses/master-plc-programming/resources?utm_source=google&utm_medium=cpc&utm_campaign=Demand-Gen_Sudan&gad_source=1&gad_campaignid=23278762041&gbraid=0AAAAADt7cD1HZa3pZ-AciYhZwoPBsSVyB&gclid=Cj0KCQiAubrJBhCbARIsAHIdxD_M2UkyG_-Zmc8e26Enw0rlJac7pJX62qJfx75qx1C8Je5gvyQM43oaAn8aEALw_wcB" class="cert-link">
             <i class="fas fa-external-link-alt"></i> View Certificate
           </a>
         </div>
