Update education and language sections in index.html

--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
       <div class="section">
         <strong>Bachelor of Mechanical Engineering</strong>
         <p>Omdurman Islamic University, Sudan</p>
-        <p class="specialization">Specialization: Industrial Automation</p>
+        <p class="specialization">Bachelor of Science - (B.Sc. Honours)</p>
         <a href="https://oiu.edu.sd" target="_blank" class="education-link">
           <i class="fas fa-external-link-alt"></i> oiu.edu.sd
         </a>
@@ -817,8 +817,8 @@
     <div class="section-card">
       <h2><i class="fas fa-language"></i> Languages</h2>
       <div class="languages-list">
-        <div class="language-item">Arabic: Native</div>
-        <div class="language-item">English: Professional</div>
+        <div class="language-item">Arabic</div>
+        <div class="language-item">English</div>
       </div>
     </div>
   </div>
