Remove 'Training' from Certifications heading

--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
     </div>
 
     <div class="section-card">
-      <h2><i class="fas fa-certificate"></i> Certifications & Training</h2>
+      <h2><i class="fas fa-certificate"></i> Certifications</h2>
       <div class="section">
         <div class="certification-item">
           <strong>IOSH Managing Safely</strong>
