--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
         
         <ul>
           <li>Managing time and tasks efficiently</li>
-          <li>Teamwork and cooperation</li>
+          <li>Teamwork and co-operation</li>
           <li>Working under pressure</li>
           <li>Good communication with customers</li>
           <li>Paying attention to details</li>
