--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
       <div class="profile-text">
         <h1>Abdelmageed Ahmed Babiker</h1>
         <p class="job-title">Automation Engineer | HSE Supervisor </p>
-        <p class="location">Khartoum, Sudan</p>
+        <p class="location">Khartoum - Sudan</p>
         <div class="social-links">
           <a href="mailto:Abdelmageedahmedsco@gmail.com">
             <i class="fas fa-envelope"></i> Email
